--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
+    "mysql2": "^3.10.3",
     "path": "^0.12.7"
   },
   "devDependencies": {
