--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-validator": "^7.1.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
     "mysql2": "^3.10.3",
